src/objects/ChatMessageRecord__c.object
<CustomObject>
    <fields>
        <fullName>Chat_Message__c</fullName>
        <label>Chat Message</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>From_User__c</fullName>
        <label>From User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChatMessageRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message_From__c</fullName>
        <label>Message From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChatMessageRecords2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message_Post_Date__c</fullName>
        <label>Message Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_User__c</fullName>
        <label>To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChatMessageRecords1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ChatMessageRecord</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChatMessageRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>